# library-tools

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml
examples/: README.md  agent_integration.py  basic_search.py  direct_client.py  multi_tool.py  pagination.py  worldcat_lookup.py
library_tools/: __init__.py
library_tools/adapters/: __init__.py  agent_sdk.py
library_tools/common/: __init__.py  config.py  errors.py
library_tools/libguides/: __init__.py  client.py  tools.py
library_tools/openalex/: __init__.py  client.py  tools.py
library_tools/primo/: __init__.py  client.py  tool.py
library_tools/repository/: __init__.py  client.py  tools.py
library_tools/worldcat/: __init__.py  client.py  tools.py
tests/: __init__.py  conftest.py  test_holdings_filtering.py  test_libguides_live.py  test_openalex_live.py  test_primo_live.py  test_repository_live.py  test_worldcat_live.py
