[project]
name = "library-tools"
version = "0.1.0"
description = "Framework-agnostic LLM tools for library and research services"
authors = [{name = "Stephen Zweibel", email = "szweibel@gc.cuny.edu"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["llm", "tools", "library", "primo", "openalex", "libguides", "repository"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyalex>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
agent-sdk = [
    "claude-agent-sdk>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/szweibel/library-tools"
Repository = "https://github.com/szweibel/library-tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
